--- a/notebooks/3e_eval_finetune.ipynb
+++ b/notebooks/3e_eval_finetune.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:42.604784Z",
-     "start_time": "2024-12-11T13:56:42.603054Z"
+     "end_time": "2024-12-12T00:45:50.029817Z",
+     "start_time": "2024-12-12T00:45:48.371764Z"
     }
    },
    "source": [
@@ -45,13 +45,13 @@
     "from transformers.pipelines.pt_utils import KeyDataset"
    ],
    "outputs": [],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:43.397964Z",
-     "start_time": "2024-12-11T13:56:43.396203Z"
+     "end_time": "2024-12-12T00:45:50.033940Z",
+     "start_time": "2024-12-12T00:45:50.032312Z"
     }
    },
    "cell_type": "code",
@@ -64,13 +64,13 @@
    ],
    "id": "1a69d01046c63b8f",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:45.438433Z",
-     "start_time": "2024-12-11T13:56:45.419083Z"
+     "end_time": "2024-12-12T00:45:50.086866Z",
+     "start_time": "2024-12-12T00:45:50.082147Z"
     }
    },
    "cell_type": "code",
@@ -80,13 +80,13 @@
    ],
    "id": "dd217abf75548e67",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:46.077241Z",
-     "start_time": "2024-12-11T13:56:46.059239Z"
+     "end_time": "2024-12-12T00:45:50.133421Z",
+     "start_time": "2024-12-12T00:45:50.125838Z"
     }
    },
    "cell_type": "code",
@@ -100,13 +100,13 @@
    ],
    "id": "58e55d8b46dc33ac",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:46.643503Z",
-     "start_time": "2024-12-11T13:56:46.630526Z"
+     "end_time": "2024-12-12T00:45:50.186420Z",
+     "start_time": "2024-12-12T00:45:50.178549Z"
     }
    },
    "cell_type": "code",
@@ -118,47 +118,64 @@
    ],
    "id": "19ac07b2242dd0af",
    "outputs": [],
-   "execution_count": 10
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "# !ls /home/richardarcher/Dropbox/Sci24_LLM_Polarization/project_/weights_local/models--meta-llama--Meta-Llama-3.1-8B-Instruct/snapshots/0e9e39f249a16976918f6564b8830bc894c89659",
-   "id": "529877df60b0dca",
-   "outputs": [],
-   "execution_count": null
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:56:49.431665Z",
-     "start_time": "2024-12-11T13:56:49.429969Z"
+     "end_time": "2024-12-12T00:45:50.223423Z",
+     "start_time": "2024-12-12T00:45:50.222238Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "# !ls /home/richardarcher/Dropbox/Sci24_LLM_Polarization/project_/weights_local/models--meta-llama--Meta-Llama-3.1-8B-Instruct/snapshots/0e9e39f249a16976918f6564b8830bc894c89659",
+   "id": "529877df60b0dca",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-12T00:45:50.266340Z",
+     "start_time": "2024-12-12T00:45:50.265158Z"
     }
    },
    "cell_type": "code",
    "source": "base_model = \"/home/richardarcher/Dropbox/Sci24_LLM_Polarization/project_/weights_local/models--meta-llama--Meta-Llama-3.1-8B-Instruct/snapshots/0e9e39f249a16976918f6564b8830bc894c89659\"",
    "id": "37e6d55334f5b694",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 7
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "# HERE",
+   "id": "55b6ef50bc876a01"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:20.568029Z",
-     "start_time": "2024-12-11T13:57:20.566517Z"
+     "end_time": "2024-12-12T00:45:50.309403Z",
+     "start_time": "2024-12-12T00:45:50.308178Z"
     }
    },
    "cell_type": "code",
-   "source": "PATH_adapter_custom_weights = \"../weights/sft/run00/checkpoint-1000/\"",
+   "source": [
+    "# PATH_adapter_custom_weights = \"../weights/sft/run00/checkpoint-1000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-1000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-10000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-20000/\"\n",
+    "PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-29000/\""
+   ],
    "id": "3b16b06ddeb2a463",
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:08.514529Z",
-     "start_time": "2024-12-11T13:57:08.333653Z"
+     "end_time": "2024-12-12T00:45:50.541890Z",
+     "start_time": "2024-12-12T00:45:50.351533Z"
     }
    },
    "cell_type": "code",
@@ -176,13 +193,13 @@
    ],
    "id": "b30b22b7c82e8852",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:12.912125Z",
-     "start_time": "2024-12-11T13:57:08.853755Z"
+     "end_time": "2024-12-12T00:45:54.794682Z",
+     "start_time": "2024-12-12T00:45:50.551784Z"
     }
    },
    "cell_type": "code",
@@ -214,20 +231,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bfcc2f2d5ebf4026961efbefb4eb3377"
+       "model_id": "7478ed97b1674a189222347ae8471d22"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 20
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:23.115827Z",
-     "start_time": "2024-12-11T13:57:21.907834Z"
+     "end_time": "2024-12-12T00:45:55.986898Z",
+     "start_time": "2024-12-12T00:45:54.806758Z"
     }
    },
    "cell_type": "code",
@@ -246,13 +263,13 @@
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:29.454495Z",
-     "start_time": "2024-12-11T13:57:29.452798Z"
+     "end_time": "2024-12-12T00:45:56.000460Z",
+     "start_time": "2024-12-12T00:45:55.999163Z"
     }
    },
    "cell_type": "code",
@@ -264,13 +281,13 @@
    ],
    "id": "47304be292554fd5",
    "outputs": [],
-   "execution_count": 24
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:30.072703Z",
-     "start_time": "2024-12-11T13:57:30.071009Z"
+     "end_time": "2024-12-12T00:45:56.043362Z",
+     "start_time": "2024-12-12T00:45:56.041653Z"
     }
    },
    "cell_type": "code",
@@ -283,13 +300,13 @@
    ],
    "id": "6f469e982841cc6a",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:34.777662Z",
-     "start_time": "2024-12-11T13:57:34.775848Z"
+     "end_time": "2024-12-12T00:45:56.087936Z",
+     "start_time": "2024-12-12T00:45:56.086083Z"
     }
    },
    "cell_type": "code",
@@ -306,26 +323,26 @@
    ],
    "id": "7a224b5d123ec1cd",
    "outputs": [],
-   "execution_count": 26
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:36.610783Z",
-     "start_time": "2024-12-11T13:57:36.609061Z"
+     "end_time": "2024-12-12T00:45:56.131462Z",
+     "start_time": "2024-12-12T00:45:56.129991Z"
     }
    },
    "cell_type": "code",
    "source": "batch_size = 8",
    "id": "83a81c70c7841d9c",
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:39.532692Z",
-     "start_time": "2024-12-11T13:57:39.530650Z"
+     "end_time": "2024-12-12T00:45:56.176007Z",
+     "start_time": "2024-12-12T00:45:56.174057Z"
     }
    },
    "cell_type": "code",
@@ -343,13 +360,13 @@
    ],
    "id": "6757cf10b573d793",
    "outputs": [],
-   "execution_count": 28
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:57:40.368216Z",
-     "start_time": "2024-12-11T13:57:40.250243Z"
+     "end_time": "2024-12-12T00:45:56.326302Z",
+     "start_time": "2024-12-12T00:45:56.218073Z"
     }
    },
    "cell_type": "code",
@@ -368,20 +385,20 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "d9bb2e819b3e484698248c5d3e684fcb"
+       "model_id": "61e5626594f24460865c2722923a9808"
       }
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
-   "execution_count": 29
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:59:10.048813Z",
-     "start_time": "2024-12-11T13:57:42.349977Z"
+     "end_time": "2024-12-12T00:47:24.446112Z",
+     "start_time": "2024-12-12T00:45:56.337804Z"
     }
    },
    "cell_type": "code",
@@ -390,6 +407,7 @@
     "ix = 0 \n",
     "for out in pipe(KeyDataset(data_, \"text\")):\n",
     "    ix = ix + 1\n",
+    "    # print(ix)\n",
     "    if ix % batch_size == 0:\n",
     "        print(f\"{ix}/{data_.shape[0]}\")\n",
     "    \n",
@@ -532,26 +550,26 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:59:10.052778Z",
-     "start_time": "2024-12-11T13:59:10.051148Z"
+     "end_time": "2024-12-12T00:47:24.464420Z",
+     "start_time": "2024-12-12T00:47:24.463034Z"
     }
    },
    "cell_type": "code",
    "source": "res_int = [int(i) for i in res]",
    "id": "d2eb106b7339e996",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:59:10.097886Z",
-     "start_time": "2024-12-11T13:59:10.095933Z"
+     "end_time": "2024-12-12T00:47:24.506060Z",
+     "start_time": "2024-12-12T00:47:24.504255Z"
     }
    },
    "cell_type": "code",
@@ -570,37 +588,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7220039292730844\n"
+      "0.7416502946954814\n"
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:59:10.196888Z",
-     "start_time": "2024-12-11T13:59:10.194437Z"
+     "end_time": "2024-12-12T00:47:24.604181Z",
+     "start_time": "2024-12-12T00:47:24.602562Z"
     }
    },
    "cell_type": "code",
    "source": "df_val = df_val.with_columns(pl.Series(res_int).alias(\"8b_quant_prediction\"))",
    "id": "c2e62ef238a608f7",
    "outputs": [],
-   "execution_count": 33
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-11T13:59:10.242779Z",
-     "start_time": "2024-12-11T13:59:10.238241Z"
+     "end_time": "2024-12-12T00:47:24.650331Z",
+     "start_time": "2024-12-12T00:47:24.645940Z"
     }
    },
    "cell_type": "code",
-   "source": "df_val.write_csv(\"../data/3_outputs/8b_quantized_predictions_for_eval_set.csv\")",
+   "source": "df_val.write_csv(\"../data/3_outputs/8b_quantized_predictions_for_eval_set_check20000.csv\")",
    "id": "7d54d132fafc5ed3",
    "outputs": [],
-   "execution_count": 34
+   "execution_count": 22
   }
  ],
  "metadata": {
