--- a/notebooks/3e_eval_finetune.ipynb
+++ b/notebooks/3e_eval_finetune.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.029817Z",
-     "start_time": "2024-12-12T00:45:48.371764Z"
+     "end_time": "2024-12-13T15:27:48.328770Z",
+     "start_time": "2024-12-13T15:27:46.722069Z"
     }
    },
    "source": [
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.033940Z",
-     "start_time": "2024-12-12T00:45:50.032312Z"
+     "end_time": "2024-12-13T15:27:48.333310Z",
+     "start_time": "2024-12-13T15:27:48.331582Z"
     }
    },
    "cell_type": "code",
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.086866Z",
-     "start_time": "2024-12-12T00:45:50.082147Z"
+     "end_time": "2024-12-13T15:27:48.384375Z",
+     "start_time": "2024-12-13T15:27:48.379813Z"
     }
    },
    "cell_type": "code",
@@ -85,8 +85,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.133421Z",
-     "start_time": "2024-12-12T00:45:50.125838Z"
+     "end_time": "2024-12-13T15:27:48.427444Z",
+     "start_time": "2024-12-13T15:27:48.421317Z"
     }
    },
    "cell_type": "code",
@@ -105,8 +105,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.186420Z",
-     "start_time": "2024-12-12T00:45:50.178549Z"
+     "end_time": "2024-12-13T15:27:48.475791Z",
+     "start_time": "2024-12-13T15:27:48.468Z"
     }
    },
    "cell_type": "code",
@@ -123,8 +123,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.223423Z",
-     "start_time": "2024-12-12T00:45:50.222238Z"
+     "end_time": "2024-12-13T15:27:48.513490Z",
+     "start_time": "2024-12-13T15:27:48.512255Z"
     }
    },
    "cell_type": "code",
@@ -136,8 +136,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.266340Z",
-     "start_time": "2024-12-12T00:45:50.265158Z"
+     "end_time": "2024-12-13T15:27:48.556309Z",
+     "start_time": "2024-12-13T15:27:48.555076Z"
     }
    },
    "cell_type": "code",
@@ -155,8 +155,30 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.309403Z",
-     "start_time": "2024-12-12T00:45:50.308178Z"
+     "end_time": "2024-12-13T15:29:44.416215Z",
+     "start_time": "2024-12-13T15:29:44.143337Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "!ls ../weights/sft/run02",
+   "id": "d7e2152c7b751041",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "checkpoint-1000   checkpoint-10500  checkpoint-2000\r\n",
+      "checkpoint-10000  checkpoint-1500   checkpoint-2500\r\n"
+     ]
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T15:27:48.598254Z",
+     "start_time": "2024-12-13T15:27:48.596980Z"
     }
    },
    "cell_type": "code",
@@ -165,7 +187,14 @@
     "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-1000/\"\n",
     "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-10000/\"\n",
     "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-20000/\"\n",
-    "PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-29000/\""
+    "# PATH_adapter_custom_weights = \"../weights/sft/run01/checkpoint-29000/\"\n",
+    "\n",
+    "\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run02/checkpoint-1000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run02/checkpoint-3000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run02/checkpoint-9000/\"\n",
+    "PATH_adapter_custom_weights = \"../weights/sft/run02/checkpoint-10000/\"\n",
+    "# PATH_adapter_custom_weights = \"../weights/sft/run02/checkpoint-1000/\""
    ],
    "id": "3b16b06ddeb2a463",
    "outputs": [],
@@ -174,8 +203,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:50.541890Z",
-     "start_time": "2024-12-12T00:45:50.351533Z"
+     "end_time": "2024-12-13T15:27:48.827523Z",
+     "start_time": "2024-12-13T15:27:48.639058Z"
     }
    },
    "cell_type": "code",
@@ -198,8 +227,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:54.794682Z",
-     "start_time": "2024-12-12T00:45:50.551784Z"
+     "end_time": "2024-12-13T15:27:54.358197Z",
+     "start_time": "2024-12-13T15:27:48.837407Z"
     }
    },
    "cell_type": "code",
@@ -231,7 +260,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "7478ed97b1674a189222347ae8471d22"
+       "model_id": "a2f37ed976a2457a86733bc0e1d9748d"
       }
      },
      "metadata": {},
@@ -243,8 +272,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:55.986898Z",
-     "start_time": "2024-12-12T00:45:54.806758Z"
+     "end_time": "2024-12-13T15:27:55.812021Z",
+     "start_time": "2024-12-13T15:27:54.370974Z"
     }
    },
    "cell_type": "code",
@@ -268,8 +297,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.000460Z",
-     "start_time": "2024-12-12T00:45:55.999163Z"
+     "end_time": "2024-12-13T15:27:55.825815Z",
+     "start_time": "2024-12-13T15:27:55.824346Z"
     }
    },
    "cell_type": "code",
@@ -286,8 +315,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.043362Z",
-     "start_time": "2024-12-12T00:45:56.041653Z"
+     "end_time": "2024-12-13T15:27:55.866918Z",
+     "start_time": "2024-12-13T15:27:55.865311Z"
     }
    },
    "cell_type": "code",
@@ -305,8 +334,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.087936Z",
-     "start_time": "2024-12-12T00:45:56.086083Z"
+     "end_time": "2024-12-13T15:27:55.909755Z",
+     "start_time": "2024-12-13T15:27:55.908093Z"
     }
    },
    "cell_type": "code",
@@ -328,12 +357,12 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.131462Z",
-     "start_time": "2024-12-12T00:45:56.129991Z"
+     "end_time": "2024-12-13T15:27:55.952760Z",
+     "start_time": "2024-12-13T15:27:55.951272Z"
     }
    },
    "cell_type": "code",
-   "source": "batch_size = 8",
+   "source": "batch_size = 16",
    "id": "83a81c70c7841d9c",
    "outputs": [],
    "execution_count": 15
@@ -341,8 +370,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.176007Z",
-     "start_time": "2024-12-12T00:45:56.174057Z"
+     "end_time": "2024-12-13T15:27:55.996057Z",
+     "start_time": "2024-12-13T15:27:55.994185Z"
     }
    },
    "cell_type": "code",
@@ -365,8 +394,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:45:56.326302Z",
-     "start_time": "2024-12-12T00:45:56.218073Z"
+     "end_time": "2024-12-13T15:27:56.154249Z",
+     "start_time": "2024-12-13T15:27:56.037215Z"
     }
    },
    "cell_type": "code",
@@ -385,7 +414,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "61e5626594f24460865c2722923a9808"
+       "model_id": "90048fc66b7d48f6b7f6e3cb48b79640"
       }
      },
      "metadata": {},
@@ -397,8 +426,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:47:24.446112Z",
-     "start_time": "2024-12-12T00:45:56.337804Z"
+     "end_time": "2024-12-13T15:29:28.262910Z",
+     "start_time": "2024-12-13T15:27:56.167038Z"
     }
    },
    "cell_type": "code",
@@ -420,133 +449,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8/1018\n",
       "16/1018\n",
-      "24/1018\n",
       "32/1018\n",
-      "40/1018\n",
       "48/1018\n",
-      "56/1018\n",
       "64/1018\n",
-      "72/1018\n",
       "80/1018\n",
-      "88/1018\n",
       "96/1018\n",
-      "104/1018\n",
       "112/1018\n",
-      "120/1018\n",
       "128/1018\n",
-      "136/1018\n",
       "144/1018\n",
-      "152/1018\n",
       "160/1018\n",
-      "168/1018\n",
       "176/1018\n",
-      "184/1018\n",
       "192/1018\n",
-      "200/1018\n",
       "208/1018\n",
-      "216/1018\n",
       "224/1018\n",
-      "232/1018\n",
       "240/1018\n",
-      "248/1018\n",
       "256/1018\n",
-      "264/1018\n",
       "272/1018\n",
-      "280/1018\n",
       "288/1018\n",
-      "296/1018\n",
       "304/1018\n",
-      "312/1018\n",
       "320/1018\n",
-      "328/1018\n",
       "336/1018\n",
-      "344/1018\n",
       "352/1018\n",
-      "360/1018\n",
       "368/1018\n",
-      "376/1018\n",
       "384/1018\n",
-      "392/1018\n",
       "400/1018\n",
-      "408/1018\n",
       "416/1018\n",
-      "424/1018\n",
       "432/1018\n",
-      "440/1018\n",
       "448/1018\n",
-      "456/1018\n",
       "464/1018\n",
-      "472/1018\n",
       "480/1018\n",
-      "488/1018\n",
       "496/1018\n",
-      "504/1018\n",
       "512/1018\n",
-      "520/1018\n",
       "528/1018\n",
-      "536/1018\n",
       "544/1018\n",
-      "552/1018\n",
       "560/1018\n",
-      "568/1018\n",
       "576/1018\n",
-      "584/1018\n",
       "592/1018\n",
-      "600/1018\n",
       "608/1018\n",
-      "616/1018\n",
       "624/1018\n",
-      "632/1018\n",
       "640/1018\n",
-      "648/1018\n",
       "656/1018\n",
-      "664/1018\n",
       "672/1018\n",
-      "680/1018\n",
       "688/1018\n",
-      "696/1018\n",
       "704/1018\n",
-      "712/1018\n",
       "720/1018\n",
-      "728/1018\n",
       "736/1018\n",
-      "744/1018\n",
       "752/1018\n",
-      "760/1018\n",
       "768/1018\n",
-      "776/1018\n",
       "784/1018\n",
-      "792/1018\n",
       "800/1018\n",
-      "808/1018\n",
       "816/1018\n",
-      "824/1018\n",
       "832/1018\n",
-      "840/1018\n",
       "848/1018\n",
-      "856/1018\n",
       "864/1018\n",
-      "872/1018\n",
       "880/1018\n",
-      "888/1018\n",
       "896/1018\n",
-      "904/1018\n",
       "912/1018\n",
-      "920/1018\n",
       "928/1018\n",
-      "936/1018\n",
       "944/1018\n",
-      "952/1018\n",
       "960/1018\n",
-      "968/1018\n",
       "976/1018\n",
-      "984/1018\n",
       "992/1018\n",
-      "1000/1018\n",
-      "1008/1018\n",
-      "1016/1018\n"
+      "1008/1018\n"
      ]
     }
    ],
@@ -555,8 +520,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:47:24.464420Z",
-     "start_time": "2024-12-12T00:47:24.463034Z"
+     "end_time": "2024-12-13T15:29:28.289124Z",
+     "start_time": "2024-12-13T15:29:28.287778Z"
     }
    },
    "cell_type": "code",
@@ -568,8 +533,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:47:24.506060Z",
-     "start_time": "2024-12-12T00:47:24.504255Z"
+     "end_time": "2024-12-13T15:29:28.321721Z",
+     "start_time": "2024-12-13T15:29:28.319646Z"
     }
    },
    "cell_type": "code",
@@ -588,7 +553,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7416502946954814\n"
+      "0.7269155206286837\n"
      ]
     }
    ],
@@ -597,8 +562,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:47:24.604181Z",
-     "start_time": "2024-12-12T00:47:24.602562Z"
+     "end_time": "2024-12-13T15:29:28.419947Z",
+     "start_time": "2024-12-13T15:29:28.418492Z"
     }
    },
    "cell_type": "code",
@@ -610,12 +575,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-12T00:47:24.650331Z",
-     "start_time": "2024-12-12T00:47:24.645940Z"
+     "end_time": "2024-12-13T15:29:28.463360Z",
+     "start_time": "2024-12-13T15:29:28.462050Z"
     }
    },
    "cell_type": "code",
-   "source": "df_val.write_csv(\"../data/3_outputs/8b_quantized_predictions_for_eval_set_check20000.csv\")",
+   "source": [
+    "# df_val.write_csv(\"../data/3_outputs/8b_quantized_predictions_for_eval_set_check20000.csv\")\n",
+    "# df_val.write_csv(\"../data/3_outputs/run02_8b_quantized_predictions_for_eval_set_check1000.csv\")\n",
+    "# df_val.write_csv(\"../data/3_outputs/run02_8b_quantized_predictions_for_eval_set_check3000.csv\")\n",
+    "# df_val.write_csv(\"../data/3_outputs/run02_8b_quantized_predictions_for_eval_set_check9000.csv\")\n",
+    "# df_val.write_csv(\"../data/3_outputs/run02_8b_quantized_predictions_for_eval_set_check10000.csv\")"
+   ],
    "id": "7d54d132fafc5ed3",
    "outputs": [],
    "execution_count": 22
