--- a/notebooks/3a_train_embedding_model_BIG.ipynb
+++ b/notebooks/3a_train_embedding_model_BIG.ipynb
@@ -1,7 +1,12 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T23:48:44.909822Z",
+     "start_time": "2024-12-13T23:48:43.060121Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "# from tqdm import tqdm\n",
@@ -24,10 +29,15 @@
    ],
    "id": "2b49b999c30e0322",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-13T23:48:44.913695Z",
+     "start_time": "2024-12-13T23:48:44.911701Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "class StarRatingDataset(Dataset):\n",
@@ -45,13 +55,17 @@
    ],
    "id": "34f3ee189af5ac9",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-12-13T23:48:48.427708Z",
+     "start_time": "2024-12-13T23:48:44.960904Z"
+    }
    },
    "source": [
     "# train_dataset = torch.load('../data/2_training_ready/embedding00/train_dataset00.pth')\n",
@@ -60,11 +74,29 @@
     "test_dataset = torch.load('../data/2_training_ready/embedding00/test_dataset01.pth')\n",
     "val_dataset = torch.load('../data/2_training_ready/embedding00/val_dataset01.pth')"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_52882/3211474504.py:4: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  test_dataset = torch.load('../data/2_training_ready/embedding00/test_dataset01.pth')\n",
+      "/tmp/ipykernel_52882/3211474504.py:5: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  val_dataset = torch.load('../data/2_training_ready/embedding00/val_dataset01.pth')\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "start_time": "2024-12-13T23:48:59.302222Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "training1 = torch.load(\"../data/2_training_ready/embedding00/train_dataset01.pth\")\n",
@@ -80,7 +112,16 @@
     "# train_dataset = StarRatingDataset(combined_embeddings.numpy(), combined_labels.numpy())"
    ],
    "id": "eecef8c74bc63b08",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_52882/3878769508.py:1: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  training1 = torch.load(\"../data/2_training_ready/embedding00/train_dataset01.pth\")\n"
+     ]
+    }
+   ],
    "execution_count": null
   },
   {
@@ -433,7 +474,28 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "predictions = []\n",
+    "correct_values = []\n",
+    "model.eval()\n",
+    "with torch.no_grad():\n",
+    "    for batch_x, batch_y in tqdm(val_loader, desc=\"Hit Rate Eval\", unit=\"batch\"):\n",
+    "        batch_y = torch.argmax(batch_y, dim=1)\n",
+    "\n",
+    "        batch_x = batch_x.to(\"cuda\")\n",
+    "        batch_y = batch_y.to(\"cuda\")\n",
+    "\n",
+    "        pred = model(batch_x)\n",
+    "\n",
+    "        # Compute hit rate\n",
+    "        y_pred_classes = torch.argmax(torch.softmax(pred, dim=1), dim=1)\n",
+    "        # y_true_classes = torch.argmax(batch_y, dim=1) # TK TK ADD BACK FOR EMD\n",
+    "\n",
+    "        for i in [i.item() for i in torch.argmax(torch.softmax(pred, dim=1), dim=1)]:\n",
+    "            predictions.append(i)\n",
+    "        for i in [i.item() for i in batch_y]: # torch.argmax(batch_y, dim=1):\n",
+    "            correct_values.append(i)"
+   ],
    "id": "10bb2cad90164ab4",
    "outputs": [],
    "execution_count": null
@@ -441,7 +503,10 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "",
+   "source": [
+    "df = pl.DataFrame({\"true\": correct_values, \"predicted\": predictions})\n",
+    "df.write_csv(\"../output/predictions/embedding.csv\")"
+   ],
    "id": "8a19449b98a79cdc",
    "outputs": [],
    "execution_count": null
